--- a/load_to_mongo.ipynb
+++ b/load_to_mongo.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dependencies\n",
     "import pymongo\n",
     "import pandas as pd"
    ]
@@ -14,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "qualified-joshua",
+   "id": "preliminary-declaration",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dress-ebony",
+   "id": "muslim-leather",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dressed-tender",
+   "id": "different-theta",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "initial-cincinnati",
+   "id": "numerical-lighting",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nearby-buffalo",
+   "id": "exclusive-worst",
    "metadata": {},
    "outputs": [],
    "source": []
