Final changes to Punkin Punks Full Project notebook

--- a/Punkin_Punks_Full_Project.ipynb
+++ b/Punkin_Punks_Full_Project.ipynb
@@ -20,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pymongo\n",
     "import pandas as pd"
    ]
   },
@@ -1336,11 +1337,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Load to Mongo"
+   ]
   }
  ],
  "metadata": {
