--- a/Punkin_Punks_Full_Project.ipynb
+++ b/Punkin_Punks_Full_Project.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extract and Clean"
+    "### Extract Data"
    ]
   },
   {
@@ -896,7 +896,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transform and Main"
+    "### Transform Data"
    ]
   },
   {
