adding comments to final jupyter notebook

--- a/Punkin_Punks_Full_Project.ipynb
+++ b/Punkin_Punks_Full_Project.ipynb
@@ -20,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import dependencies\n",
     "import pymongo\n",
     "import pandas as pd"
    ]
@@ -905,6 +906,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read in clean csv files\n",
     "clean_gdp_df = pd.read_csv('Resources/clean_gdp.csv');\n",
     "clean_happiness_df = pd.read_csv('Resources/clean_happiness.csv');\n",
     "clean_inflation_df = pd.read_csv('Resources/clean_inflation.csv');\n",
@@ -986,6 +988,7 @@
     }
    ],
    "source": [
+    "# Delete index column\n",
     "del clean_gdp_df['Unnamed: 0']\n",
     "clean_gdp_df.head()"
    ]
@@ -1065,6 +1068,7 @@
     }
    ],
    "source": [
+    "# Delete index column and rename Country or region column\n",
     "del clean_happiness_df['Unnamed: 0']\n",
     "clean_happiness_df.rename(columns = {'Country or region': 'Country Name'}, inplace = True)\n",
     "clean_happiness_df.head()"
@@ -1145,6 +1149,7 @@
     }
    ],
    "source": [
+    "# Delete index column\n",
     "del clean_inflation_df['Unnamed: 0']\n",
     "clean_inflation_df.head()"
    ]
@@ -1224,6 +1229,7 @@
     }
    ],
    "source": [
+    "# Delete index column\n",
     "del clean_savings_df['Unnamed: 0']\n",
     "clean_savings_df.head()"
    ]
@@ -1321,6 +1327,7 @@
     }
    ],
    "source": [
+    "# Join all dataframes to one table\n",
     "world_wellbeing_df = pd.merge(clean_happiness_df, clean_gdp_df, how = 'left', on = 'Country Name')\n",
     "world_wellbeing_df = pd.merge(world_wellbeing_df, clean_savings_df, how = 'left', on = 'Country Name')\n",
     "world_wellbeing_df = pd.merge(world_wellbeing_df, clean_inflation_df, how = 'left', on = 'Country Name')\n",
@@ -1333,6 +1340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save new datafram to csv file\n",
     "world_wellbeing_df.to_csv('Resources/world_wellbeing_2019.csv', index = False)"
    ]
   },
@@ -1465,6 +1473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loop through dataframe and load to Mongo Database\n",
     "for index,row in world_wellbeing.iterrows():\n",
     "    post = {\"Country\": world_wellbeing.loc[index,\"Country Name\"],\n",
     "            \"Happiness\": world_wellbeing.loc[index,\"Score\"],\n",
@@ -1654,9 +1663,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1668,7 +1677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
